<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_team" />
        <item
            android:id="@+id/nav_shed_games"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/nav_shed_games" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/nav_live" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/nav_store" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/nav_contacts" />

    </group>
</menu>